--- a/.gitmodules
+++ b/.gitmodules
@@ -57,3 +57,8 @@
 	path = prodigia_out_invoice_sat_validation
 	url = git@github.com:mailynC/prodigia_out_invoice_sat_validation.git
 	branch = 12.0
+
+[submodule "payment_attachment_prodigia"]
+	path = payment_attachment_prodigia
+	url = git@github.com:mailynC/payment_attachment_prodigia.git
+	branch = 12.0
